--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,17 @@
     font-family: "neuemontreal";
     src: "/assets/fonts/NeueMontreal-Regular.ttf";
 }
+
+@layer utilities {
+    /* Hide scrollbar for Chrome, Safari, and Opera */
+    .no-scrollbar::-webkit-scrollbar {
+      display: none;
+    }
+
+
+    /* Hide scrollbar for IE, Edge, and Firefox */
+    .no-scrollbar {
+      -ms-overflow-style: none; /* IE and Edge */
+      scrollbar-width: none; /* Firefox */
+    }
+} 
